# CoLibri

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  pyproject.toml  rag_implementation_plan.md
.github/workflows/: ci.yml  release.yml  rust.yml
colibri-rs/: README.md
colibri-rs/src/: error.rs  index_meta.rs  main.rs  manifest.rs  query.rs
colibri-rs/src/cli/: doctor.rs  index.rs  serve.rs
colibri-rs/src/sources/: markdown.rs  mod.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  INSTALLATION.md  MAINTENANCE.md  RELEASING.md  RUST_TRANSITION_PLAN.md  architecture-execution-plan.md  packaging-and-extensibility-plan.md
docs/adr/: 0001-python-plugin-runtime.md  0002-canonical-envelope-v1.md  0003-metadata-store-sqlite.md
docs/eval/: README.md  bakeoff-plan.md
docs/operations/: backup-restore.md
docs/plans/: 2026-02-23-plugin-configure-hook-design.md  2026-02-23-plugin-configure-hook-plan.md  2026-02-24-native-connectors-design.md  2026-02-24-native-connectors-plan.md
docs/user/: README.md  concepts.md  configuration.md  getting-started.md  troubleshooting.md  use-cases.md
packaging/homebrew/: README.md  colibri.rb
plugins/bundled/filesystem_documents/: README.md  bootstrap.sh  plugin.py  run.sh
plugins/bundled/zephyr_scale/: README.md  configure.py  plugin_manifest.json
plugins/examples/filesystem_documents/: README.md  plugin.py  plugin_manifest.json  requirements.txt
plugins/examples/filesystem_markdown/: README.md  plugin.py  plugin_manifest.json
plugins/examples/zephyr_scale/: README.md  plugin.py  plugin_manifest.json
plugins/python-sdk/: README.md  pyproject.toml
plugins/python-sdk/colibri_plugin_sdk/: __init__.py  envelope.py
plugins/spec/: document-envelope.schema.json  plugin-manifest.schema.json
specs/frontmatter-aware-search/: design.md  plan.md  requirements.md
specs/hybrid-search-bm25/: design.md  plan.md  requirements.md
src/: bundled_plugins.rs  canonical_store.rs  config.rs  embedding.rs  envelope.rs  error.rs  indexer.rs  main.rs  manifest.rs  mcp.rs  metadata_store.rs  plugin_host.rs  plugin_requirements.rs  query.rs  serve_ready.rs
src/cli/: bootstrap.rs  connectors.rs  doctor.rs  generations.rs  import.rs  index.rs  instructions.rs  migrate.rs  mod.rs  plugins.rs  profiles.rs  search.rs  serve.rs  sync.rs  tour.rs
src/cli/config_tui/: app.rs  event.rs  mod.rs  ui.rs
src/colibri/: __init__.py  api_server.py  cli.py  config.py  doc_catalog.py  embedding.py  index_meta.py  index_state.py  indexer.py  manifest.py  mcp_server.py  query.py  setup.py  source_factory.py  translate.py  tui.py
src/colibri/processors/: __init__.py  base.py  epub.py  pdf.py  registry.py  utils.py
src/colibri/sources/: __init__.py  base.py  markdown.py  obsidian.py
src/connectors/: filesystem.rs  mod.rs
src/connectors/zephyr_scale/: api.rs  folders.rs  html_to_md.rs  mod.rs  render.rs
src/sources/: markdown.rs  mod.rs
tests/: __init__.py  test_config_management.py  test_config_profiles.py  test_doc_catalog.py  test_import.py  test_index_state.py  test_indexer_incremental.py  test_manifest.py  test_processors.py  test_query_tools.py  test_sources.py  test_translate.py
